--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
-project.url=http://chatty.telran-edu.de:8089/
+project.url=http://chatty.telran-edu.de:8089/login
 selenoid.url=http://165.227.145.48:4444/wd/hub
-selenoid.state=true
+selenoid.state=false
 window.wight=1920
 window.height=1080
