--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-project.url=http://chatty.telran-edu.de:8089/login
+project.url=http://chatty.telran-edu.de:8089/
 selenoid.url=http://165.227.145.48:4444/wd/hub
 selenoid.state=false
 window.wight=1920
