--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,15 @@ test {
     }
     systemProperty'allure.result.directory','build/allure-results'
 }
+
+
+task loginTest(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/TestLogin.xml'
+    }
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat "full"
+    }
+    systemProperty 'allure.result.directory', 'build/allure-results'
+}
