Created negative Test for CreateProfile

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,5 @@
 project.url=http://chatty.telran-edu.de:8089/
+project.api.url=http://chatty.telran-edu.de:8989/
 selenoid.url=http://165.227.145.48:4444/wd/hub
 selenoid.state=false
 window.wight=1920
