--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,5 +2,6 @@ project.url=http://chatty.telran-edu.de:8089/
 project.api.url=http://chatty.telran-edu.de:8989/
 selenoid.url=http://165.227.145.48:4444/wd/hub
 selenoid.state=false
+headless.state=true
 window.wight=1920
 window.height=1080
