--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
 project.url=http://chatty.telran-edu.de:8089/
 project.api.url=http://chatty.telran-edu.de:8989/
 selenoid.url=http://localhost:8080/
-headless.state=false
+headless.state=true
 selenoid.state=true
 window.wight=1920
 window.height=1080
